# mobrob_robin

./: README.md
dwa_spline_local_planner/: CMakeLists.txt  CMakeLists.txt~  blp_plugin.xml  package.xml
dwa_spline_local_planner/cfg/: DWASplinePlanner.cfg  DWASplinePlanner.cfg~
dwa_spline_local_planner/config/: move_base_params.yaml
dwa_spline_local_planner/include/dwa_spline_local_planner/: dwa_spline_planner.h  dwa_spline_planner.h~  dwa_spline_planner_ros.h  dwa_spline_planner_ros.h~
dwa_spline_local_planner/src/: dwa_spline_planner.cpp  dwa_spline_planner_ros.cpp
mobrob_robin/: CMakeLists.txt  CMakeLists.txt~  package.xml
mobrob_robin_bringup/: CMakeLists.txt  README.md  package.xml
mobrob_robin_bringup/config/: mobrob.rviz
mobrob_robin_bringup/launch/: joystick_teleop.launch  keyboard_teleop.launch  mobrob.launch  move_base.launch  only_joy.launch  simulation.launch  spline.launch
mobrob_robin_control/: CMakeLists.txt  README.md  package.xml
mobrob_robin_control/config/: base_control.yaml  joint_states.yaml  velocity_smoother_params.yaml
mobrob_robin_control/launch/: all_controllers.launch  base_control.launch  cmd_vel_controller.launch  cmd_vel_controller_joy.launch  joint_states.launch  velocity_smoother.launch
mobrob_robin_control/src/: mobrob_robin_cmd_vel_controller.cpp
mobrob_robin_description/: CMakeLists.txt  README.md  package.xml
mobrob_robin_description/meshes/: bot_PLS200.dae  mobrob_1.stl  mobrob_2.stl  mobrob_3.dae  wheel_big.stl  wheel_small.stl  wheel_suspension_big.stl  wheel_suspension_small.stl  wheel_suspension_small_long.stl
mobrob_robin_description/robots/: mobrob.urdf.xacro  mobrob_robin_real.urdf.xacro  mobrob_robin_simulated.urdf.xacro  test.urdf
mobrob_robin_description/urdf/: mobrob_robin.common.xacro  mobrob_robin.gazebo.xacro  mobrob_robin.library.xacro  mobrob_robin.properties.xacro
mobrob_robin_description/urdf/mobrob_robin_base/: base.transmission.xacro  base.urdf.xacro
mobrob_robin_description/urdf/sensors/: pls200.gazebo.xacro  pls200.urdf.xacro  ultrasound.urdf.xacro
mobrob_robin_diagnostics/: CMakeLists.txt  README.md  package.xml
mobrob_robin_diagnostics/config/: analyzer.yaml
mobrob_robin_diagnostics/launch/: diagnostics.launch
mobrob_robin_diagnostics/src/: diagnostics.cpp
mobrob_robin_driver/: CMakeLists.txt  README.md  package.xml
mobrob_robin_driver/launch/: odometry.launch  real_interfaces.launch  simulated_interfaces.launch
mobrob_robin_driver/src/: mobrob_base_interface.cpp  mobrob_joint_state_publisher.cpp  mobrob_odometry_publisher_simulation_only.cpp  mobrob_robin_virtual_robot_driver_interface.cpp
mobrob_robin_gazebo/: CMakeLists.txt  README.md  package.xml
mobrob_robin_gazebo/launch/: mobrob_arena.launch  mobrob_empty-world.launch
mobrob_robin_gazebo/launch/includes/: mobrob_spawner.launch
mobrob_robin_inverse_kin_simulation/: CMakeLists.txt  MW_custom_RTOS_header.h  defines.txt  ert_main.cpp  mobrob_robin_inverse_kin_simulation.cpp  mobrob_robin_inverse_kin_simulation.h  mobrob_robin_inverse_kin_simulation_private.h  mobrob_robin_inverse_kin_simulation_types.h  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
mobrob_robin_navigation/: CMakeLists.txt  README.md  package.xml
mobrob_robin_navigation/config/: costmap_common_params.yaml  costmap_common_params.yaml~  dwa_local_planner_params.yaml  dwa_spline_local_planner_params.yaml  eband_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
mobrob_robin_navigation/launch/: amcl.launch  complete_amcl.launch  complete_karto.launch  move_base.launch
mobrob_robin_navigation/map/: amcl_fullMap.yaml  fullMap.yaml  sp1_5_stiege.pgm  sp1_5_stiege.yaml  sp1_5og.yaml
mobrob_robin_rqt/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
mobrob_robin_rqt/ launch script/: rqt.sh
mobrob_robin_rqt/config/: dashboard.perspective
mobrob_robin_rqt/resource/: MobrobDashboard.ui
mobrob_robin_rqt/scripts/: mobrob_robin_rqt
mobrob_robin_rqt/src/mobrob_dashboard/: mobrob_dashboard.py  mobrob_dashboard_widget.py
mobrob_robin_teleop/: CMakeLists.txt  package.xml
mobrob_robin_teleop/launch/: trustmaster_teleop.launch
mobrob_robin_ultrasound/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
mobrob_robin_ultrasound/Arduino_sketch/: Ultrasound_sensors.ino
mobrob_robin_ultrasound/Arduino_sketch/Ultrasound_sensors/: Ultrasound_sensors.ino
mobrob_robin_ultrasound/launch/: arduino_init.launch  roomba_init.launch~  ultrasonic_test.launch  ultrasonic_test.launch~
sick_pls200/: CMakeLists.txt  README.md  package.xml
sick_pls200/include/sick_pls200/: pls200_driver.h
sick_pls200/launch/: pls200.launch
sick_pls200/src/: pls200.cpp  pls200_driver.cpp  pls_node.cpp
spline_test/: CMakeLists.txt  package.xml
spline_test/launch/: spline_test.launch
spline_test/src/: spline_test.cpp
