<?xml version="1.0"?>
<package>
  <name>mobrob_robin_control</name>
  <version>0.0.0</version>
  <description>The mobrob_robin_control package</description>

  <maintainer email="proprentner.lukas@gmail.com">Lukas Proprentner</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>position_controllers</run_depend>

  <export>

  </export>
</package>
