<?xml version="1.0"?>
<package>
  <name>mobrob_robin_navigation</name>
  <version>0.0.0</version>
  <description>The mobrob_robin_navigation package</description>

  <maintainer email="lukas@todo.todo">lukas</maintainer>
  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
